# latentspace-explorer

./: .buildinfo  .env.dev  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  changelog.rst  docker-compose.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/notebooks/: exploring_iris_dataset.doctree
.doctrees/source/: changelog_link.doctree  features.doctree  intro.doctree  latent_variables_intro.doctree  lse.doctree  lse.libs.backend.doctree  lse.libs.backend.io.doctree  lse.libs.dash_core.callbacks.doctree  lse.libs.dash_core.doctree  lse.libs.dash_core.layout.doctree  lse.libs.doctree  lse.libs.utils.doctree  lse.utils.doctree  pipeline.doctree  workflow.doctree
.github/workflows/: sphinx.yml  test.yml
_sources/: index.rst.txt
_sources/notebooks/: exploring_iris_dataset.ipynb.txt
_sources/source/: features.md.txt  latent_variables_intro.md.txt  lse.libs.backend.rst.txt  lse.libs.dash_core.layout.rst.txt  lse.libs.utils.rst.txt  pipeline.md.txt
docs/: conf.py  export_notebook_attachments.py
docs/notebooks/: exploring_iris_dataset.ipynb
docs/source/: features.md  intro.md  latent_variables_intro.md  lse.libs.backend.io.rst  lse.libs.dash_core.callbacks.rst  lse.libs.dash_core.rst  lse.libs.rst  lse.rst  lse.utils.rst  pipeline.md  workflow.md
lse/: __init__.py  app_builder.py  latent_space_interface.py
lse/libs/: data_models.py  exceptions.py  metaparameters.py
lse/libs/assets/: template.css
lse/libs/backend/: __init__.py  _core.py  _kmeans.py  _plotting.py  _utils.py  data_models.py
lse/libs/backend/io/: __init__.py  _data_processing.py  _offline.py  _online.py  data_models.py  utils.py
lse/libs/dash_core/: components_models.py
lse/libs/dash_core/callbacks/: __init__.py  common.py  computation.py  dropdowns.py  loading.py  output.py  plot.py  utils.py
lse/libs/dash_core/layout/: __init__.py  _core.py  _explore_tab.py  _export_tab.py  _import_tab.py
lse/libs/utils/: data_loading.py  data_table_formatting.py  plot_style.py
lse/utils/: cache.py  cache_config.py  constants.py  database.py  logging_config.py  strtobool.py
notebooks/: exploring_iris_dataset.html
server/: app.py  entrypoint.sh
source/: changelog_link.html  features.html  intro.html  latent_variables_intro.html  lse.html  lse.libs.backend.html  lse.libs.backend.io.html  lse.libs.dash_core.callbacks.html  lse.libs.dash_core.html  lse.libs.dash_core.layout.html  lse.libs.html  lse.libs.utils.html  lse.utils.html  pipeline.html  workflow.html
tests/: test_backend.py  test_data_table_formatting.py
